Fixed footer and alignment, about and contact page

--- a/about.html
+++ b/about.html
@@ -19,16 +19,16 @@
                 </ul>
             </nav>
         </header>
-        <div class="textsection">
-            <h1>About Me</h1>
-            <p>Blah blah blah blah blah blah blah blah blah blah blah
+        <div class="row">
+            <div class="textsection">
+                <h1>About Me</h1>
+                <p>Blah blah blah blah blah blah blah blah blah blah blah
                 blah blah blah blah blah blah blah blah blah blah 
-            </p>
-        </div>
-        <div class="picsection">
-            <img src="profilepic.jpg">
-            
-        </div>
+                </p>
+            </div>
+            <div class="picsection">
+                <img src="profilepic.jpg" class="profilepic">
+            </div>
         
         <footer style="background-color: black;">
             <ul>
