--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,8 @@
 
             </form>
         </div>
-        <div class="picsection">
-            <img src="profilepic.jpg">
-        </div>
-        <footer style="background-color: black;">
+        <div class="picsection"></div>
+        <footer>
             <ul>
                 <li>TEXT</li>
                 <li>TEXT</li>
