--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
             <h1>Contact</h1>
             <form class="contactform">
                 <label for="name">Name:</label><br>
-                <input type="textbox" size="50"><br>
+                <input type="textbox" size="40" class="textarea"><br>
                 <label for="email">Email Address:</label><br>
-                <input type="email" size="50"><br>
+                <input type="email" size="40" class="textarea"><br>
                 <label for="inquiry">Inquiry Type:</label><br>
                     <select id="inquiry">
                         <option value="general">General Question/Comment</option>
@@ -33,7 +33,7 @@
                         <option value="Media Request">Media Request</option>
                     </select><br>
                 <label for="message">Message:</label><br>
-                <textarea name="textarea" rows="10" cols="53"></textarea>
+                <textarea name="textarea" rows="10" cols="43"></textarea>
 
             </form>
         </div>
