messing with alignment

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
                 </ul>
             </nav>
         </header>
-        <div>
+        <div class="">
             <div class="background"></div><br>
             <div class="text">Best Eats in Korea<br>
                 <form action="korea.html"><button type="submit" class="button">Explore</button></form>
             </div><br>
+        </div>
+
             <div class="bar">
                 <div class="tile"><a href="korea.html">Korea<img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
                 <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
