--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
                 </ul>
             </nav>
         </header>
+
         <div class="">
-            <div class="background"></div><br>
-            <div class="text">Best Eats in Korea<br>
-                <form action="korea.html"><button type="submit" class="button">Explore</button></form>
-            </div><br>
+            <div id="parent">
+                <div id="overlay">
+                    <div id="content"><a href="korea.html">Best Eats in Korea</a><br>
+                </div><br>
+            </div>
         </div>
 
             <div class="bar">
