Major design update

--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,34 @@
     <head>
         <link rel="stylesheet" href="style.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact</title>
+        <title>My Travel</title>
     </head>
     <body>
         <header>
-            <nav style="background-color: black; color: white;">
+            <nav>
                 <ul>
-                    <div>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="destinations.html">Destinations</a></li>
-                        <li><a href="">Search</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </div>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="destinations.html">DESTINATIONS</a></li>
+                        <li><a href="">FAQ</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                <div class="search">
+                    <input type="text" placeholder="search">
+                    <button type="submit" class="searchbutton"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" /></svg></button>
+                </div>
                 </ul>
             </nav>
+            <div class="iconbar">
+                <img src="youtubeicon.png" class="icon">
+                <img src="twittericon.png" class="icon">
+                <img src="linkedinicon.png" class="icon">
+                <img src="instagramicon.png" class="icon">
+                <img src="facebookicon.png" class="icon">
+            </div>
+            <div>
+                <img src="bannerimage.jpg" width="100%">
+            </div>
         </header>
         <div class="textsection">
             <h1>Contact</h1>
