more aesthetic updates

--- a/about.html
+++ b/about.html
@@ -28,23 +28,22 @@
                 <img src="instagramicon.png" class="icon">
                 <img src="facebookicon.png" class="icon">
             </div>
-            <div>
-                <img src="bannerimage.jpg" width="100%">
+            <div class="banner">
+                <img src="bannerimage.jpg" class="banner">
             </div>
         </header>
-        
-        <div class="row">
-            <div class="textsection">
+        <div class="">
+            <div class="">
                 <h1>About Me</h1>
                 <p>Blah blah blah blah blah blah blah blah blah blah blah
                 blah blah blah blah blah blah blah blah blah blah 
                 </p>
             </div>
-            <div class="picsection">
+            <div class="">
                 <img src="profilepic.jpg" class="profilepic">
             </div>
-        
-        <footer style="background-color: black;">
+        </div>
+        <footer>
             <ul>
                 <li>TEXT</li>
                 <li>TEXT</li>
