--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
                 <img src="instagramicon.png" class="icon">
                 <img src="facebookicon.png" class="icon">
             </div>
-            <div>
-                <img src="bannerimage.jpg" width="100%">
+            <div class="banner">
+                <img src="bannerimage.jpg" class="banner">
             </div>
         </header>
         <div class="textsection">
