--- a/destinations.html
+++ b/destinations.html
@@ -28,8 +28,8 @@
                 <img src="instagramicon.png" class="icon">
                 <img src="facebookicon.png" class="icon">
             </div>
-            <div>
-                <img src="bannerimage.jpg" width="100%">
+            <div class="banner">
+                <img src="bannerimage.jpg" class="banner">
             </div>
         </header>
         <h1>Destinations</h1>
@@ -45,7 +45,7 @@
             <div class="tile">Iceland<br><img src="iceland_thumbnail.jpg" class="thumbnail"></div>
             <div class="tile">Phillipines<br><img src="philippines_thumbnail.JPG" class="thumbnail"></div>
         </div>
-    <footer style="background-color: black;">
+    <footer>
         <ul>
             <li>TEXT</li>
             <li>TEXT</li>
