--- a/korea.html
+++ b/korea.html
@@ -28,8 +28,8 @@
                 <img src="instagramicon.png" class="icon">
                 <img src="facebookicon.png" class="icon">
             </div>
-            <div>
-                <img src="bannerimage.jpg" width="100%">
+            <div class="banner">
+                <img src="bannerimage.jpg" class="banner">
             </div>
         </header>
         <h1>Korea</h1>
@@ -126,7 +126,7 @@
                 <div class="caption">INSERT CAPTION HERE</div></div>
 
         </div>
-        <footer style="background-color: black;">
+        <footer>
             <ul>
                 <li>TEXT</li>
                 <li>TEXT</li>
