--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
                 </ul>
             </nav>
             <div class="iconbar">
-                <img src="youtubeicon.png" class="icon">
-                <img src="twittericon.png" class="icon">
-                <img src="linkedinicon.png" class="icon">
-                <img src="instagramicon.png" class="icon">
-                <img src="facebookicon.png" class="icon">
+                <a href="https://www.youtube.com"><img src="youtubeicon.png" class="icon"></a>
+                <a href="https://www.twitter.com"><img src="twittericon.png" class="icon"></a>
+                <a href="https://www.linkedin.com/in/priyulau"><img src="linkedinicon.png" class="icon"></a>
+                <a href="https://www.instagram.com/priyulau/?hl=en"><img src="instagramicon.png" class="icon"></a>
+                <a href="https://www.facebook.com/priyulau"><img src="facebookicon.png" class="icon"></a>
             </div>
             <div class="banner">
                 <img src="bannerimage.jpg" class="banner">
