--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,11 @@
         <div class="picsection"></div>
         <footer>
             <ul>
-                <li>TEXT</li>
-                <li>TEXT</li>
-                <li>TEXT</li>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br><br>
             </ul>
+            <p>Copyright 2023 Priscilla Lau | All Rights Reserved | Privacy Disclosure </p>
         </footer>
+    </body>
+</html>
