--- a/destinations.html
+++ b/destinations.html
@@ -45,12 +45,13 @@
             <div class="tile">Iceland<br><img src="iceland_thumbnail.jpg" class="thumbnail"></div>
             <div class="tile">Phillipines<br><img src="philippines_thumbnail.JPG" class="thumbnail"></div>
         </div>
-    <footer>
-        <ul>
-            <li>TEXT</li>
-            <li>TEXT</li>
-            <li>TEXT</li>
-        </ul>
-    </footer>
+        <footer>
+            <ul>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br><br>
+            </ul>
+            <p>Copyright 2023 Priscilla Lau | All Rights Reserved | Privacy Disclosure </p>
+        </footer>
 </body>
 </html>
