--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="">
             <div id="parent">
                 <div id="overlay">
-                    <div id="content"><a href="korea.html">Best Eats in Korea</a><br>
+                    <!--    <div id="content"><a href="korea.html">Best Eats in Korea</a><br>    -->
                 </div><br>
             </div>
         </div>
@@ -55,10 +55,11 @@
         </div>
         <footer>
             <ul>
-                <li>TEXT</li>
-                <li>TEXT</li>
-                <li>TEXT</li>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br><br>
             </ul>
+            <p>Copyright 2023 Priscilla Lau | All Rights Reserved | Privacy Disclosure </p>
         </footer>
 
     </body>
