--- a/about.html
+++ b/about.html
@@ -45,8 +45,11 @@
         </div>
         <footer>
             <ul>
-                <li>TEXT</li>
-                <li>TEXT</li>
-                <li>TEXT</li>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br>
+                <li><a href=""></a></li><br><br>
             </ul>
+            <p>Copyright 2023 Priscilla Lau | All Rights Reserved | Privacy Disclosure </p>
         </footer>
+    </body>
+</html>
