messing with responsiveness

--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
             </div>
         </header>
         <div class="">
-            <div id="parent">
-                <div id="overlay">
+            <div class="container" id="">
                     <!--    <div id="content"><a href="korea.html">Best Eats in Korea</a><br>    -->
                 </div><br>
             </div>
         </div>
-
             <div class="bar">
                 <div class="tile"><a href="korea.html">Korea<img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
                 <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
