undo last changes - revert to original

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
             </div>
         </header>
         <div class="">
-            <div class="container" id="">
-                    <!--    <div id="content"><a href="korea.html">Best Eats in Korea</a><br>    -->
+            <div id="parent">
+                <div id="overlay">
+                    <div id="content"><a href="korea.html"><img src="adventure_transparent.png"></a><br>
                 </div><br>
             </div>
         </div>
+
             <div class="bar">
                 <div class="tile"><a href="korea.html">Korea<img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
                 <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
