added faq, updated styling

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="destinations.html">DESTINATIONS</a></li>
-                        <li><a href="">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                 <div class="search">
                     <input type="text" placeholder="search">
@@ -32,17 +32,31 @@
                 <img src="bannerimage.jpg" class="banner">
             </div>
         </header>
-        <div class="">
-            <div class="">
-                <h1>About Me</h1>
-                <p>Blah blah blah blah blah blah blah blah blah blah blah
-                blah blah blah blah blah blah blah blah blah blah 
-                </p>
-            </div>
-            <div class="">
+        
+        <h1>About Me</h1>
+        <div class="row">
+            <div class="column centered">
                 <img src="profilepic.jpg" class="profilepic">
             </div>
+            <div class="column">
+                <p>Hi, I'm Priscilla! <br><br>
+                    
+                    I'm a Pacific Northwest townie who left the West Coast for the first time
+                    in 2012 to go to college on the East Coast. I got and used my passport for the first time
+                    after graduating college in 2016 and I haven't looked back since!<br><br>
+
+                    While the COVID-19 pandemic certainly put all travel to a hault, I'm determined to
+                    get caught up!<br><br>
+
+                    I hope you'll follow me along on my adventures, pick up some tips and tricks, and
+                    get inspired along the way.<br><br>
+
+                    Yours Truly,<br>
+                    Priscilla<br>
+                </p>
+            </div>
         </div>
+        <br><br>
         <footer>
             <ul>
                 <li><a href=""></a></li><br>
