--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="destinations.html">DESTINATIONS</a></li>
-                        <li><a href="">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                 <div class="search">
                     <input type="text" placeholder="search">
@@ -46,8 +46,9 @@
                         <option value="Media Request">Media Request</option>
                     </select><br>
                 <label for="message">Message:</label><br>
-                <textarea name="textarea" rows="10" cols="43"></textarea>
-
+                <textarea name="textarea" rows="10" cols="43"></textarea><br><br>
+                <button type="submit">Submit</button>
+                
             </form>
         </div>
         <div class="picsection"></div>
