--- a/korea.html
+++ b/korea.html
@@ -12,7 +12,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="destinations.html">DESTINATIONS</a></li>
-                        <li><a href="">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                 <div class="search">
                     <input type="text" placeholder="search">
