last changes for the night

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Travel</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />        <title>My Travel</title>
     </head>
     <body>
         <header>
@@ -28,8 +27,8 @@
                 <a href="https://www.instagram.com/priyulau/?hl=en"><img src="instagramicon.png" class="icon"></a>
                 <a href="https://www.facebook.com/priyulau"><img src="facebookicon.png" class="icon"></a>
             </div>
-            <div class="banner">
-                <img src="bannerimage.jpg" class="banner">
+            <div class="bannerbox">
+                <div class="bannerimg"><img src="bannerimage.jpg"></a></div>
             </div>
         </header>
         <div class="">
@@ -39,7 +38,6 @@
                 </div><br>
             </div>
         </div>
-
             <div class="bar">
                 <div class="tile"><a href="korea.html">Korea<img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
                 <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
