--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="">
             <div id="parent">
                 <div id="overlay">
-                    <div id="content"><a href="korea.html"><img src="adventure_transparent.png"></a><br>
+                    <!--<div id="content"><a href="korea.html"><img src="adventure_transparent.png"></a><br>-->
                 </div><br>
             </div>
         </div>
-            <!--<div class="bar">
+            <div class="bar">
                 <div class="tile"><a href="korea.html">Korea<img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
                 <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
                 <div class="tile">Japan<img src="japan_thumbnail.jpg" class="thumbnail"></div>
@@ -49,7 +49,7 @@
                 <div class="tile">Thailand<img src="thailand_thumbnail.jpg" class="thumbnail"></div>
                 <div class="tile">Iceland<img src="iceland_thumbnail.jpg" class="thumbnail"></div>
                 <div class="tile">Phillipines<img src="philippines_thumbnail.JPG" class="thumbnail"></div>
-            </div>-->
+            </div>
         </div>
         <footer>
             <ul>
