fixed overflow issue

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="">
             <div id="parent">
                 <div id="overlay">
-                    <!--<div id="content"><a href="korea.html"><img src="adventure_transparent.png"></a><br>-->
+                    <div id="content"><a href="korea.html"><img src="adventure_transparent.png"></a><br>
                 </div><br>
             </div>
         </div>
