--- a/destinations.html
+++ b/destinations.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />        <title>My Travel</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />        
+        <title>Destinations</title>
     </head>
     <body>
         <header>
