trying out google photo links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
             <div class="bar">
-                <div class="tile"><a href="korea.html">Korea<img src="korea_thumbnail.jpg" class="thumbnail"></a></div>
+                <div class="tile"><a href="korea.html">Korea<img src="https://lh3.googleusercontent.com/pw/AJFCJaUqD3zAErIwbdMSPdn2mWZM86gzPB5-_hISu57qHNDac_Tc9bItQQuxXRhbASb2UpCKyOEMhRetbMeL1VhJYNiVxp2p3hlRMTlEdtJMZztAqC8PFUns4Jdpi3EtUoqla58aOmcyElEaknxcopN4DjxXaQ=w1014-h760-s-no?authuser=0" class="thumbnail"></a></div>
                 <div class="tile">Cambodia<img src="cambodia_thumbnail.jpg" class="thumbnail"></div>
                 <div class="tile">Japan<img src="japan_thumbnail.jpg" class="thumbnail"></div>
                 <div class="tile">Taiwan<img src="taiwan_thumbnail.JPG" class="thumbnail"></div>
