Updated korea page

--- a/korea.html
+++ b/korea.html
@@ -34,96 +34,57 @@
         </header>
         <h1>Korea</h1>
         <div class="gallery">
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-                <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-            <div class="caption">INSERT CAPTION HERE</div></div>
-                <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-                <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-                <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
-            <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
-                <div class="caption">INSERT CAPTION HERE</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXQF1inL_aA_j4LDwnOBRbjJBNprH0NJj73pMEY_d9WCTHcs7oNzzk1TAsWXaTftbcQpIpCD-mOrUXdtsCuo3XG12kEAspTqEdRYA7TDVQ_Wts5GOemkrC5bn0sA2gu7rXXw-bwCy0TwQoYyn0NlhqyFg=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Hand pulled noodles and dumplings at Gwangjung market  (featured on Netflix!)</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaUogOYG3IOLn17a8ZY1mIbCyojajcqaMu8lh2ezEivWgf8B1eoTHeRr5uvlaGCjYQXT4tW2cjnlQpniD9IkhVdUBvO-QJREMPz4obY2AoHKEyZLrlxpxywne8GVLJxl1mvxrjZDUva-jsOUPje6C8JTzg=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Interesting window shopping at Starfield COEX Mall</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWUjOwJxjmeB63WqRHmOBYY7AB8Hkyj_Hpbfqzoxs4WS-pmWOSgJMhRIOjhiYYxmuHxwCjIs1I56BOl_-Ck1jNsytsK7pi5AmFdAuxXeAwQ3XReKxj3giY2f9CYWY1ZB0rlgg9ona4GX9DKGfpC9URRpg=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">A unique delicacy in Korea - beef tartar and fresh raw octopus (it's still moving!)</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaX5KnN6oFYxz63_PgIsD8gNOhGVrLteSgrtPo03RIYf_YPqcEs5q5T-zoJszPtF3FhUFQEvWEKhPV1Ro6z0z8q9VK0jxyWRgopYlwLxuv351MkluBdOV7d8QSPyTKQBdJGif1BW397d_8h9s3nSGogIDA=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">My favorite trendy budget shopping place in all of Korea - Go To Mall at the Express Bus Terminal (we came here at least 3x!)</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWT5L1mQAhnZPZylryXHPLQ0C8_Lh_MAv-LDrC6RSu93c7sZ8gCqq2JjhCZs7PpHU9wsnz-mDD3BXl0N1T1eIj76UphiAoTAQvi62_8_JYcLiaDPc4fY9ZGGVfQbKxoe-BPDWmZvBizjE6pBfFZUACXjA=w759-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Best place to see the cherry blossoms - Seokchon Lake next to Lotte World Mall</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXIdH8bg6QzqC9CGaPGuDs-gQZ7Osxe_c2_okuOrSl1H21pd6biCWn3NIXnX0yZ19pddcSX9zM_sJMpXr9d52819p-xceeC9HC6YgKvuen5mVl6YwryN882FUVG9YBTiSY1TKXfyef2avdl5bH0zaZbeA=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">It's all about the climb? Great viewpoints along the way and an even better reward at the top of Bukhansan Mountain</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXB1uxVYGXYKzgAalzPtgyIRwT44PoQGFXftGj7Qj4iLODUasR4TrKSuZuD4ajzqAM54MTuoSFG1VDhFryU1ys9sz8aXPmKXLS_i4CFgz42GV_EBxy9fZcyDnjnENl94wjYM7WJqVL3KF1g_gaJYo2JnA=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">The best place to eat ALL the street food Seoul has to offer - Myeong-Dong Street</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWbdFLMSnIB0TiZOBP3bV0UHUBTfp0V7mgHSidXPmAuDagigDLLCgqhmErbRczWS40K2KQ6RJgU8htijxlPT_KvxMRmiuU8ELbuWJOV3QL89UrBkBD19E_koRDcPAoZJXa4gubqHZlcn3tTrpxioOO5sw=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">One of the most iconic foods of KDramas - fried chicken and beer! Lots of locals here. Find it on the way to Myeong-dong Street. </div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaUntdDqqOyIVOiDKCFQzPklAfuYoJ9_ORhodKQHc3EWzraIiTZ7yTI7PmllfHq1Ax9BVoIK7B9cAFsCfAmmuznJHlRMxW8iHIcNf_iG_ETtSLhQVBPJyDmXn_21OKf8UnpR-XT6RzLeGxF2XM3Wac_lQw=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Cool down with some Bing-soo at the chain - Sulbing. I highly recommend their soybean powder (original) for your first try!</div></div>
+                <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaVaRV4Y0aSigaD_QO9IN1NW1yAr8NvmOi4rjQIUKLU3VAlWcNND77YbSVeLQRQD2-ZNrE9kwuxxhqtoDaRRTPnfXq5-jl_ZM7NPzq3E1IGwIb4OXUl1oP1-_Ne0Ihbd7FLLRxNvgXpUhvLM5AWc-syN4g=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+            <div class="caption">Definitely stop by this cutesy mall on Insadong street for some windowshopping and creative inspiration. We didn't buy anything here but loved to see all the little trinkets. There's also a poop-themed cafe at the top!</div></div>
+                <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaV072ySLw9NQ_POgjBY0y2RrnaxVugON95AMeFgDD7FfSxGz5yot2bvGifePF7MHWlBs9_7b6vbMNEsHRB3HAYBJeiTxcAuEYAU_LU9Oy4rLzcvdqm01HKCLIms1YQ-bwNuPuVP9uA4Rl4pxttADE0hsw=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">No particular location - but loved seeing all the Kpop idol posters in all the underground terminals!</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXNnt2VSYWCDxDC-RuFkG-ofvv28c-PHIb44HqxnDHdLVmDNk_UCub0bnqS9WKOWNG3igrr2MDpiKFQp6G1mmn4s1s9o-wyWt5oe6TA3ISMGZvRsQaDVbJD2nQeiH0WsssnA3XqU-EsPGuXqsUzRvX_xQ=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Cafe Onion is a MUST VISIT. Skip the line in the front (for dining in) and head to the back for takeaway. You can eat your treats at the seating area in the front!</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaUa-y7Jl1Pn470PHoRO3flOewBMd2gJx0R6Rcfx0fOqvaQSTRFiJWogOg0b-F26TdK-37K6Eu3V1xM36YAw3GOEYqXsCo34h9Bjd_PNwA7mFLpATvYNOVduYQJwUJBE3UVdnZnSpiGneb50qz7ZFirMXg=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Sign up for a free tour of Gyeongbokgung Palace on VisitSeoul.net. You will have to pay a small fee for admission (if 18+) but the free guided tour is A+.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaVgc3ThWrxcjo_LGoAuZZasHaNDIdPEp4qOc7L-ikf-M__cwzUDWnAsZ81lPHWiaCwNmseGR5JJXQZPWalU-ZWHReUeVFcASNhyNJxz-mC8NFJ25Pum5KyGv4aKwbVHSfPvv1-Q4IIBuI_RY0grupNKlw=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Ok, it's kind of corny, but DEFINITELY rent some hanboks and walk around the palace area and take pictures. Hanbok rentals are all over and are approximately $20~.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXuB1vETXGfsofDqVsgLkN75ki33OAJmsYc4mUXqLGE6I8LVQ9gE2QRfnckEIorWNSFshWK5hxPHxprW0-ld-3JLhBTtlG47R2U6uuA42k8u-KE_wkGR9_4cIBZ3uwtq_Air0WQKZC0mcH_dorOCZhSDA=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Walk around West of Bukchon Hanok Village for lots of cafes and restaurants. We loved this little street food cafe for a quick snack.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWcT8L7x2gdU7Xz-160aAQQqfPs_z200T-FoY0aIHTG4L3NE0IKIvF_VASL9HyJx4RUIlPuRUN0hScuG3CVdsKy-Pm8UDtyuycOxI903bAyVRnJ91TMGg3UVx9-_5zu0XtHNAzZliN9jg3kuhoyE0vQzA=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Delicious sampler and buckwheat noodles. They also have a makgeoilli sampler you can pair with your meal. Staff are super helpful, even though they don't cater to English-speaking guests.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXpiyng3rq2YtEesKZ8_sc3bB6Ist6qm_AGRHmQcu6Oa4FIG3FES7M1WQHk3MTsZtcMugtaNtDOejG4v7CP1Z-45NW1asd-JeCyssKJuJZcOHDXhOJSD3i3qeyuObxoXJzWNjNY9eZZaSSEbnnYRFCO1Q=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">This Michelin star restaurant Myeongdong Kyoja Main Store was well worth the visit. The menu is only four of their signature items, so you can't go wrong with anything! Definitely recommend coming for an 11am early lunch (or at opening) as there was a really long line when we finished eating!</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXw5Eew_Avm8q7WXrpMuYdDJuOZgOGyaqysWDtp3k2-NMnp10rk_xJk39efJOwqJPIwI5nSkVGkUWBNm7GSIqDG_VQg7A8ETaHAzndwPobMuYsYZ56uaJsd8YpBqGl7XLnrA42T7wU-hzQM2CsKM_X5Vw=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Well worth the hike at Namsam Park up to Seoul Tower! There's a small complex at the top where you can grab a snack with a great view. Definitely check out all the padlocks along the sides!</div></div>
+                <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaU_ZRFpsxQLERJczL4M3hxdn0tfY0I1nTT-8aZQ3s8OLVxV98urnjJ-O77m-0bBdybrfIevNBGcY86FSWn_mg2U2nLRsTKB3-2lH_n4DEgMJNsZTXENvHWFUN4p2zfRq1WfOW3G5sGRdFyJFX2JGLhlwg=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Was it worth $17/person to pet some cats? Debatable. If you want to go to one, there's one in the side streets of Myeong-dong Market.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaVeXpaHE0rtgqfJN8yrIwhIqlFdqSvMLsAaaZelZlU1Oq8GBcX7rE1WzDSoBZp0Gk1RXgtRqOM7e6jVShCQG_ZiLvuYJetdDdplNLeTwKng5Xn4P4LR_xHsrzuRcQbXll2FVl3hoV5pdVsJxEbTCp2HPg=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">OK all you KPop fans, THIS PLACE is the place to go for cheaper albums. It's underground in the Myeongdong Subway Station.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaUv32MvStTNY81hVNuCExbnTa5_KLThflCimSIXwlJ_VaBOuaknWjEHQYuC3PdTYdKaHO7wf9yupI7o4yTajpTxGcm6eAekMFCVNTHrk7xLlxioLEtE2ntIqvBQEH1pxJfgIv4WV25cM3OSNSUmrwwGuQ=w750-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">You can never have too much fried chicken. You can find popular chain bhc chicken all over Seoul. For some variety, try their half-and-half!</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaWbzC_kQsHbc_g1R99h67djqCArFTYICOvTifa8U7WcF9mdC3dAAm4BTmbA5ybWoCi6fU2P5KGUGCnVqLDC0QFm6RaQSSKs76LgkPJC71ZxwVfUauq7HKmyIInl1TUXJ06bt-XtVmwF45Wb9DjLunvshg=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">This particular kimbap stand was inside Bucheon Market in Busan near Busan Train Station, but if you see any Korean grandmas making them anywhere, definitely stop and try it! It's an affordable, quick, classic snack.</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaV-gr1sv6Pa-M3BFuHGtnN-8A-DUqMwRzqsElMehN9xDR9fMAGCCBdb8AJ84O7rlYQ6dJ5_elDHNu_izKXa7GsCjlHTerg77aj655KzyJZk306vMqUAbBQn1YUHE-JezfsWE_7_SG9SL2U6IbvNh4FzKw=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Come to Gwangali Beach at dusk for a beautiful view of the bridge. There are plenty of dinner and drink options along the beach too. Or, you can go to Burger King like we did...</div></div>
+            <div class="tile"><img src="https://lh3.googleusercontent.com/pw/AJFCJaXm4cuxHHSvP6Ro07IC9uTxZtcA-Ux3oXDUYog4rS1e2qnXFO4UsQ2FGT6T05Qg-ObQPZQm6ttXDeR0RWGDtj2QTFbvJPLYBj84ChyYzzS91wnZUxeLUpeK61C0HcQtpPSs7OuZF4x1G1KjqdSy8bBT1A=w1334-h1000-s-no?authuser=0" width="300" height="200"><br>
+                <div class="caption">Gamcheon Cultural Village is a MUST visit! Beautiful colored houses and little shops along the way. Definitely follow the walking path numbered out on the map for the full experience!</div></div>
+           
+            <!--TEMPLATE: <div class="tile"><img src="temple.jpg" width="300" height="200"><br>
+                <div class="caption">INSERT CAPTION HERE</div></div>-->
 
         </div>
         <footer>
